<resources>
    <string name="app_name">HackathonApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="LogInButtonText">Log in</string>
    <string name="gymButtonText">Gym</string>
    <string name="chatButtonText">Chat</string>
    <string name="canteenButtonText">Canteen</string>
    <string name="gameButtonText">gameButtonText</string>
    <string name="riddleText">DO NOT CRY AND JUST SMILE \nMAKES LIFE BETTER JUST BY PASSING BY, \nPAINTS COLOR EVERYWHERE \nVOMITS RAINBOWS THAT YOU WOULD NOT BEAR.</string>
    <string name="findYourFriendHeader">FIND YOUR FRIEND</string>
    <string name="codeLabel">WRITE THE CODE HERE</string>
    <string name="writeTheCodeHere">WRITE THE CODE HERE</string>
    <string name="okSendCodeButton">OK</string>
    <string name="conratulationsTextLabel">CONGRATULATIONS \nYOU JUST FOUND YOUR FRIEND!</string>
    <string name="gotPointLabel">YOU GOT\n+1 POINT</string>
    <string name="GoBackButton">Go Back</string>
</resources>
