<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/gym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/barbell"
                android:text="@string/gymButtonText"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/canteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/barbell"
                android:text="@string/canteenButtonText"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/barbell"
                android:text="@string/chatButtonText"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/barbell"
                android:text="@string/gameButtonText"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>