<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#006699"
    tools:context=".findingGameHome">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#006699">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/findYourFriendHeader"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:typeface="monospace"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/riddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="0dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/riddleText"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:typeface="monospace"
                android:gravity="center"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/emoji"
                android:layout_width="216dp"
                android:layout_height="216dp"
                android:layout_marginTop="25dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/roxana"
                android:gravity="center"
                android:layout_gravity="center"/>

            <AutoCompleteTextView
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:hint="@string/writeTheCodeHere"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white"
                android:gravity="center"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/sendCodeButton"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="okButtonClicked"
                android:text="@string/okSendCodeButton"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>